simplify implementation using pointnet2 modules

--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -13,7 +13,9 @@
     "import spconv\n",
     "import sys\n",
     "sys.path.append('/home/jhultman/Projects/tmp/PV-RCNN/Pointnet2.PyTorch/')\n",
-    "from pointnet2.pointnet2_utils import ball_query, gather_operation, furthest_point_sample"
+    "\n",
+    "from pointnet2.pointnet2_modules import PointnetSAModuleMSG\n",
+    "from pointnet2.pointnet2_utils import furthest_point_sample"
    ]
   },
   {
@@ -39,93 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VSA_MLP(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Represents G in equation 2.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, C_in, channels):\n",
-    "        \"\"\"\n",
-    "        C_in: incoming channels.\n",
-    "        channels: length-3 list of channels in each layer.\n",
-    "        \"\"\"\n",
-    "        super(VSA_MLP, self).__init__()\n",
-    "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(C_in, channels[0], bias=True),\n",
-    "            nn.BatchNorm1d(channels[0]),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.Linear(channels[0], channels[1], bias=True),\n",
-    "            nn.BatchNorm1d(channels[1]),\n",
-    "            nn.ReLU(inplace=True),\n",
-    "            nn.Linear(channels[1], channels[2], bias=True),\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, voxel_set):\n",
-    "        x = self.layers(voxel_set)\n",
-    "        x = x.max(2)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class VoxelSetAbstraction(nn.Module):\n",
-    "    \"\"\"\n",
-    "    For each keypoint, convert its location to\n",
-    "    continuous voxel index coordinates. Then fetch\n",
-    "    voxels within ball query.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, radius, nsample, voxel_size, volume_offset):\n",
-    "        \"\"\"\n",
-    "        radius: maximum distance for ball query, measured in raw point cloud coordinates.\n",
-    "        nsample: maximum number of neighbors to return in ball query.\n",
-    "        voxel_size: length-3 tensor describing size of atomic voxel, accounting for stride.\n",
-    "        volume_offset: length-3 tensor describing coordinate offset of voxel grid.\n",
-    "        \"\"\"\n",
-    "        super(VoxelSetAbstraction, self).__init__()\n",
-    "        self.radius = radius\n",
-    "        self.nsample = nsample\n",
-    "        self.voxel_size = voxel_size\n",
-    "        self.volume_offset = volume_offset\n",
-    "\n",
-    "    def to_raw_coordinates(self, voxel_index):\n",
-    "        \"\"\"\n",
-    "        voxel_index: shape (B, Tk, 4) array of coordinates\n",
-    "        return: shape (B, Tk, 3) array of locations in raw coordinates.\n",
-    "        \"\"\"\n",
-    "        xyz = voxel_index[..., 1:].float() * self.voxel_size\n",
-    "        xyz = (xyz + self.volume_offset).unsqueeze(0)\n",
-    "        return xyz\n",
-    "\n",
-    "    def get_neighbors(self, keypoint_location, voxel_feature, voxel_location):\n",
-    "        neighbor_index = ball_query(self.radius, self.nsample, voxel_location, keypoint_location)\n",
-    "        neighbor_feature = gather_operation(voxel_feature, neighbor_index)\n",
-    "        neighbor_location = gather_operation(voxel_location, neighbor_index)\n",
-    "        return neighbor_feature, neighbor_location\n",
-    "\n",
-    "    def combine_features(self, neighbor_feature, neighbor_location, keypoint_location):\n",
-    "        \"\"\"Form neighborhood feature set (equation 1).\"\"\"\n",
-    "        offset_location = neighbor_location - keypoint_location\n",
-    "        combined_feature = torch.cat((neighbor_feature, offset_location), dim=2)\n",
-    "        return combined_feature\n",
-    "\n",
-    "    def forward(self, keypoint_location, voxel_feature, voxel_index):\n",
-    "        voxel_location = self.to_raw_coordinates(voxel_index)\n",
-    "        neighbor_feature, neighbor_location = self.get_neighbors(keypoint_location, voxel_feature, voxel_location)\n",
-    "        feature = self.combine_features(neighbor_feature, neighbor_location, keypoint_location)\n",
-    "        return feature"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class CNN_3D(nn.Module):\n",
     "    \"\"\"\n",
     "    Placeholder sparse 3D CNN with four blocks:\n",
@@ -138,7 +53,7 @@
     "    Returns feature volumes strided 1x, 2x, 4x, 8x.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, C_in, shape):\n",
+    "    def __init__(self, C_in, grid_shape, cfg):\n",
     "        super(CNN_3D, self).__init__()\n",
     "        self.blocks = spconv.SparseSequential(\n",
     "            spconv.SparseConv3d(C_in, 16, 3, 1, padding=0, bias=False),\n",
@@ -146,289 +61,110 @@
     "            spconv.SparseConv3d(16, 32, 3, 2, padding=1, bias=False),\n",
     "            spconv.SparseConv3d(32, 64, 3, 2, padding=1, bias=False),\n",
     "        )\n",
-    "        self.shape = shape\n",
+    "        self.grid_shape = grid_shape\n",
+    "        self.base_voxel_size = torch.cuda.FloatTensor(cfg.voxel_size)\n",
+    "        self.voxel_offset = torch.cuda.FloatTensor(cfg.grid_bounds[:3])\n",
+    "    \n",
+    "    def to_global(self, stride, volume):\n",
+    "        \"\"\"\n",
+    "        Convert integer voxel indices to metric coordinates.\n",
+    "        voxel_size: length-3 tensor describing size of atomic voxel, accounting for stride.\n",
+    "        voxel_offset: length-3 tensor describing coordinate offset of voxel grid.\n",
+    "        \"\"\"\n",
+    "        feature, index = volume.features, volume.indices\n",
+    "        voxel_size = self.base_voxel_size * (2 ** stride)\n",
+    "        xyz = index[..., 1:].float() * voxel_size\n",
+    "        xyz = (xyz + self.voxel_offset)\n",
+    "        return feature, xyz\n",
     "\n",
     "    def forward(self, features, coordinates, batch_size):\n",
     "        x0 = spconv.SparseConvTensor(\n",
-    "            features, coordinates.int(), self.shape, batch_size,\n",
+    "            features, coordinates.int(), self.grid_shape, batch_size,\n",
     "        )\n",
     "        x1 = self.blocks[0](x0)\n",
     "        x2 = self.blocks[1](x1)\n",
     "        x3 = self.blocks[2](x2)\n",
     "        x4 = self.blocks[3](x3)\n",
-    "        x = [x1, x2, x3, x4]\n",
+    "        x = [self.to_global(i, x) for i, x in enumerate([x1, x2, x3, x4])]\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class PV_RCNN(nn.Module):\n",
     "    \"\"\"\n",
     "    Carry out feature computation described in PV-RCNN paper.\n",
+    "    \n",
+    "    For each feature volume stride, convert keypoint locations to\n",
+    "    continuous voxel index coordinates. Then fetch voxels within ball query.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, num_keypoint):\n",
+    "    def __init__(self, cfg):\n",
     "        \"\"\"\n",
     "        num_keypoint: number of keypoints\n",
     "        \"\"\"\n",
     "        super(PV_RCNN, self).__init__()\n",
-    "        self.num_keypoint = num_keypoint\n",
-    "        pass\n",
+    "        self.pnet = PointnetSAModuleMSG(\n",
+    "            npoint=-1, radii=[0.1, 0.5], nsamples=[16, 32],\n",
+    "            mlps=[[16, 32, 64], [16, 32, 128]], use_xyz=True,\n",
+    "        )\n",
+    "        self.voxel_generator = spconv.utils.VoxelGenerator(\n",
+    "            voxel_size=cfg.voxel_size, \n",
+    "            point_cloud_range=cfg.grid_bounds,\n",
+    "            max_voxels=cfg.max_voxels,\n",
+    "            max_num_points=cfg.max_num_points,\n",
+    "        )\n",
+    "        grid_shape = np.r_[self.voxel_generator.grid_size[::-1]] + [1, 0, 0]\n",
+    "        self.cnn = CNN_3D(C_in=cfg.C_in, grid_shape=grid_shape, cfg=cfg)\n",
+    "        self.cfg = cfg\n",
+    "       \n",
+    "    def voxelize(self, points):\n",
+    "        \"\"\"\n",
+    "        Compute sparse voxel grid.\n",
+    "        \"\"\"\n",
+    "        features, coordinates, voxel_population = self.voxel_generator.generate(points)\n",
+    "        coordinates = np.pad(coordinates, ((0, 0), (1, 0)), mode=\"constant\", constant_values=0)\n",
+    "        from_numpy = lambda x: torch.from_numpy(x).cuda()\n",
+    "        points, features, coordinates, voxel_population = map(\n",
+    "            from_numpy, (points, features, coordinates, voxel_population))\n",
+    "        features = features.view(-1, self.cfg.C_in)\n",
+    "        return points, features, coordinates, voxel_population\n",
     "    \n",
-    "    def forward(self, raw_point):\n",
-    "        keypoint_index = furthest_point_sample(raw_point, self.num_keypoint)\n",
-    "        keypoint = gather_operation(raw_point, keypoint_index)"
+    "    def forward(self, points):\n",
+    "        points, features, coordinates, voxel_population = self.voxelize(points)\n",
+    "        out = self.cnn(features, coordinates, batch_size=1)\n",
+    "\n",
+    "        xyz, point_features = torch.split(points, [3, 1], dim=-1)\n",
+    "        out = [(point_features, xyz)] + out\n",
+    "\n",
+    "        xyz = xyz.unsqueeze(0).contiguous()\n",
+    "        indices = furthest_point_sample(xyz, cfg.n_keypoints).squeeze(0).long()\n",
+    "        keypoints = points[indices]\n",
+    "        keypoints_xyz, keypoints_features = torch.split(keypoints, [3, 1], dim=-1)\n",
+    "        voxel_features_i, voxel_coords_i = out[2]\n",
+    "\n",
+    "        voxel_coords_i = voxel_coords_i.unsqueeze(0).contiguous()\n",
+    "        voxel_features_i = voxel_features_i.unsqueeze(0).permute(0, 2, 1).contiguous()\n",
+    "        keypoints_xyz = keypoints_xyz.unsqueeze(0).contiguous()\n",
+    "\n",
+    "        _, out = self.pnet(voxel_coords_i, voxel_features_i, keypoints_xyz)\n",
+    "        return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cfg = PvrcnnConfig()\n",
-    "\n",
-    "voxel_generator = spconv.utils.VoxelGenerator(\n",
-    "    voxel_size=cfg.voxel_size, \n",
-    "    point_cloud_range=cfg.grid_bounds,\n",
-    "    max_voxels=cfg.max_voxels,\n",
-    "    max_num_points=cfg.max_num_points,\n",
-    ")\n",
-    "\n",
+    "net = PV_RCNN(cfg).cuda()\n",
     "points = np.fromfile(cfg.sample_fpath, dtype=np.float32).reshape(-1, cfg.C_in)\n",
-    "features, coordinates, voxel_population = voxel_generator.generate(points)\n",
-    "coordinates = np.pad(coordinates, ((0, 0), (1, 0)), mode=\"constant\", constant_values=0)\n",
-    "\n",
-    "from_numpy = lambda x: torch.from_numpy(x).cuda()\n",
-    "points, features, coordinates, voxel_population = map(\n",
-    "    from_numpy, (points, features, coordinates, voxel_population))\n",
-    "features = features.view(-1, cfg.C_in)\n",
-    "\n",
-    "shape = np.r_[voxel_generator.grid_size[::-1]] + [1, 0, 0] # [1280, 1600, 40] -> [41, 1600, 1280]\n",
-    "cnn_3d = CNN_3D(C_in=cfg.C_in, shape=shape).cuda()\n",
-    "out = cnn_3d(features.view(-1, 4), coordinates, batch_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vsa = VoxelSetAbstraction(\n",
-    "    radius=0.2, nsample=25, \n",
-    "    voxel_size=torch.cuda.FloatTensor([0.05, 0.05, 0.1]),\n",
-    "    volume_offset=torch.cuda.FloatTensor([0, 0, 0]),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indices_keypoint = furthest_point_sample(points.unsqueeze(0), cfg.n_keypoints)\n",
-    "keypoint_location = points[indices_keypoint.long()]\n",
-    "\n",
-    "idx = 2\n",
-    "voxel_size = torch.cuda.FloatTensor(cfg.voxel_size) * 2 ** (idx)\n",
-    "volume_offset = torch.cuda.FloatTensor([0, 0, 0])\n",
-    "\n",
-    "feature_volume = out[idx]\n",
-    "voxel_feature = feature_volume.features\n",
-    "voxel_index = feature_volume.indices\n",
-    "\n",
-    "xyz = voxel_index[..., 1:].float() * voxel_size\n",
-    "xyz = (xyz + volume_offset).unsqueeze(0)\n",
-    "\n",
-    "neighbor_index = ball_query(0.4, 8, xyz, keypoint_location)\n",
-    "neighbor_feature = gather_operation(\n",
-    "    voxel_feature.unsqueeze(0), \n",
-    "    neighbor_index.squeeze(0),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 2048, 8])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neighbor_index.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2048, 43009, 8])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neighbor_feature.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 2048, 8])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neighbor_index.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neighbor_feature."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 415043, 16])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "voxel_feature.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([415043, 16])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "voxel_feature.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([1, 2048, 25])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neighbor_index.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([415043, 16])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "voxel_feature.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([415043, 3])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "xyz.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def forward(self, keypoint_location, voxel_feature, voxel_index):"
+    "out = net(points)"
    ]
   }
  ],
